feat: Drivers statistics.

--- a/voom-fe/src/app/shared/header/header.html
+++ b/voom-fe/src/app/shared/header/header.html
@@ -15,6 +15,7 @@
           <button mat-button (click)="rideHistory()">Ride History</button>
         }
         @if (user.role === 'DRIVER') {
+          <button mat-button (click)="driverStatistics()">Statistics</button>
           <button mat-button (click)="scheduledRidesDriver()">Scheduled Rides</button>
         }
         <button mat-button (click)="signOut()">Sign Out</button>
