--- a/voom-app/app/src/main/res/layout/fragment_splash.xml
+++ b/voom-app/app/src/main/res/layout/fragment_splash.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".shared.SplashFragment">
 
     <LinearLayout
@@ -28,6 +29,13 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/logo" />
 
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:id="@+id/loader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:indeterminate="true"
+                app:indicatorColor="@color/primary"/>
 
         </LinearLayout>
 
