--- a/voom-app/app/src/main/res/layout/fragment_home_unauthenticated.xml
+++ b/voom-app/app/src/main/res/layout/fragment_home_unauthenticated.xml
@@ -109,6 +109,13 @@
                 android:text="Estimated distance: -"
                 android:textStyle="bold"/>
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnSignIn"
+                android:layout_width="match_parent"
+                android:layout_marginTop="12dp"
+                android:layout_height="wrap_content"
+                android:text="Sign In to Access more features"/>
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
