--- a/voom-app/app/src/main/res/navigation/main_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/main_nav_graph.xml
@@ -120,5 +120,10 @@
     <fragment
         android:id="@+id/unauthenticatedHomeFragment"
         android:name="inc.visor.voom.app.unauthenticated.home.UnauthenticatedHomeFragment"
-        android:label="UnauthenticatedHomeFragment" />
+        android:label="UnauthenticatedHomeFragment" >
+        <action
+            android:id="@+id/action_unauthenticatedHomeFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpToInclusive="false" />
+    </fragment>
 </navigation>
