--- a/voom-fe/src/app/main-shell/admin-pages/admin-report/admin-report.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-report/admin-report.html
@@ -1,8 +1,6 @@
 <div class="reports-container">
-
   <mat-card class="filter-card">
     <div class="filter-content">
-
       <mat-form-field appearance="outline" class="date-field">
         <mat-label>From</mat-label>
         <input matInput [matDatepicker]="fromPicker" [(ngModel)]="fromDate" />
@@ -17,6 +15,46 @@
         <mat-datepicker #toPicker></mat-datepicker>
       </mat-form-field>
 
+      <mat-form-field appearance="outline" class="user-field">
+        <mat-label>User</mat-label>
+
+        <mat-select [(ngModel)]="selectedUser">
+          <mat-select-trigger>
+            <div class="select-option-row">
+              <mat-icon *ngIf="!selectedUser">public</mat-icon>
+
+              <mat-icon *ngIf="selectedUser?.userRoleId === 2">directions_car</mat-icon>
+              <mat-icon *ngIf="selectedUser?.userRoleId === 3">person</mat-icon>
+              <mat-icon *ngIf="selectedUser?.userRoleId === 1">admin_panel_settings</mat-icon>
+
+              <span>
+                {{
+                  selectedUser
+                    ? selectedUser.firstName + ' ' + selectedUser.lastName
+                    : 'System Overview'
+                }}
+              </span>
+            </div>
+          </mat-select-trigger>
+
+          <mat-option [value]="null">
+            <div class="select-option-row">
+              <mat-icon>public</mat-icon>
+              <span>System Overview</span>
+            </div>
+          </mat-option>
+
+          <mat-option *ngFor="let u of users" [value]="u">
+            <div class="select-option-row">
+              <mat-icon *ngIf="u.userRoleId === 2">directions_car</mat-icon>
+              <mat-icon *ngIf="u.userRoleId === 3">person</mat-icon>
+              <mat-icon *ngIf="u.userRoleId === 1">admin_panel_settings</mat-icon>
+              <span>{{ u.firstName }} {{ u.lastName }}</span>
+            </div>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
       <button
         mat-raised-button
         color="primary"
@@ -26,7 +64,6 @@
       >
         Generate Report
       </button>
-
     </div>
   </mat-card>
 
@@ -38,7 +75,7 @@
 
     <mat-card class="summary-card">
       <h3>Total Kilometers</h3>
-      <p>{{ summary.totalKm | number:'1.2-2' }} km</p>
+      <p>{{ summary.totalKm | number: '1.2-2' }} km</p>
     </mat-card>
 
     <mat-card class="summary-card">
@@ -64,5 +101,4 @@
       ></canvas>
     </div>
   </mat-card>
-
 </div>
