--- a/voom-fe/src/app/main-shell/admin-pages/admin-report/admin-report.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-report/admin-report.html
@@ -1,4 +1,4 @@
-<div class="reports-container">
+<div class="p-8 space-y-8">
   <mat-card class="filter-card">
     <div class="filter-content">
       <mat-form-field appearance="outline" class="date-field">
