--- a/voom-app/app/src/main/res/navigation/main_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/main_nav_graph.xml
@@ -101,9 +101,16 @@
         android:name="inc.visor.voom.app.unauthenticated.password.ResetPasswordFragment"
         android:label="fragment_reset_password"
         tools:layout="@layout/fragment_reset_password">
+        <argument
+            android:name="token"
+            app:argType="string"
+            app:nullable="false" />
+        <deepLink
+            app:uri="voom://reset-password?token={token}" />
         <action
             android:id="@+id/action_resetPasswordFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/mainUserFragment"
@@ -125,4 +132,20 @@
         android:name="inc.visor.voom.app.admin.main.MainAdminFragment"
         android:label="fragment_main_admin"
         tools:layout="@layout/fragment_main_admin" />
+    <fragment
+        android:id="@+id/accountActivationFragment"
+        android:name="inc.visor.voom.app.unauthenticated.registration.AccountActivationFragment"
+        android:label="fragment_account_activation"
+        tools:layout="@layout/fragment_account_activation">
+        <argument
+            android:name="token"
+            app:argType="string"
+            app:nullable="false" />
+        <deepLink
+            app:uri="voom://verify-email?token={token}" />
+        <action
+            android:id="@+id/action_accountActivationFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
 </navigation>
