--- a/voom-app/app/src/main/res/navigation/user_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/user_nav_graph.xml
@@ -23,7 +23,6 @@
 
     </fragment>
 
-
     <fragment
         android:id="@+id/loginFragment"
         android:name="inc.visor.voom.app.unauthenticated.login.LoginFragment"
@@ -48,6 +47,9 @@
         android:id="@+id/userProfileFragment"
         android:name="inc.visor.voom.app.user.profile.ProfileFragment"
         android:label="ProfileFragment" />
-
+    <fragment
+        android:id="@+id/userHomeFragment"
+        android:name="inc.visor.voom.app.user.home.UserHomeFragment"
+        android:label="UserHomeFragment" />
 
 </navigation>
