added fully functional fragment for tracking ride as user - live position on map - reporting driver during the ride - PANIC - leave review after the ride

--- a/voom-app/app/src/main/res/navigation/user_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/user_nav_graph.xml
@@ -48,6 +48,10 @@
         android:id="@+id/userProfileFragment"
         android:name="inc.visor.voom.app.user.profile.ProfileFragment"
         android:label="ProfileFragment" />
+    <fragment
+        android:id="@+id/userRideTrackingFragment"
+        android:name="inc.visor.voom.app.user.tracking.UserRideTrackingFragment"
+        android:label="UserRideTrackingFragment" />
 
 
 </navigation>
