--- a/voom-app/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/voom-app/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/nav_services"
         android:icon="@drawable/round_apps_24"
-        android:title="@string/nav_services"/>
+        android:title="@string/nav_tracking"/>
 
     <item
         android:id="@+id/nav_activity"
