--- a/voom-app/app/src/main/res/navigation/main_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/main_nav_graph.xml
@@ -150,7 +150,8 @@
             android:id="@+id/action_accountActivationFragment_to_loginFragment"
             app:destination="@id/loginFragment"
             app:popUpToInclusive="true"/>
-        android:id="@+id/unauthenticatedHomeFragment"
+    </fragment>
+    <fragment android:id="@+id/unauthenticatedHomeFragment"
         android:name="inc.visor.voom.app.unauthenticated.home.UnauthenticatedHomeFragment"
         android:label="UnauthenticatedHomeFragment" >
         <action
