--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-users/admin-users.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-users/admin-users.html
@@ -2,20 +2,28 @@
   <mat-drawer mode="side" opened class="pt-2 py-2 min-w-64">
     <div class="p-2 space-y-2">
       <div class="flex items-center space-x-4 pb-4">
-        <app-value-input-string class="w-44" [label]="'Search'" [formControl]="searchFormControl"/>
+        <app-value-input-string class="w-44" [label]="'Search'" [formControl]="searchFormControl" />
         <mat-icon class="cursor-pointer scale-150" (click)="addUser()">add_circle</mat-icon>
       </div>
       @if (filteredUsers(); as users) {
         @for (user of users; track user) {
           @if (user.id === selectedUser()?.id) {
-            <mat-card appearance="filled" class="py-4 px-2 cursor-pointer outlined" (click)="selectUser(user)">
+            <mat-card
+              appearance="filled"
+              class="py-4 px-2 cursor-pointer outlined"
+              (click)="selectUser(user)"
+            >
               <div class="flex justify-center items-center">
                 <div class="text-lg px-2 text-white">{{ user.firstName }}</div>
                 <div class="text-lg px-2 text-white">{{ user.lastName }}</div>
               </div>
             </mat-card>
           } @else {
-            <mat-card appearance="outlined" class="py-4 px-2 cursor-pointer outlined" (click)="selectUser(user)">
+            <mat-card
+              appearance="outlined"
+              class="py-4 px-2 cursor-pointer outlined"
+              (click)="selectUser(user)"
+            >
               <div class="flex justify-center items-center">
                 <div class="text-lg px-2">{{ user.firstName }}</div>
                 <div class="text-lg px-2">{{ user.lastName }}</div>
@@ -29,33 +37,63 @@
     </div>
   </mat-drawer>
   <mat-drawer-content class="flex flex-col space-y-4 p-8">
-    <div class="flex justify-end items-center space-x-4">
-
-    </div>
+    <div class="flex justify-end items-center space-x-4"></div>
     @if (selectedUser()) {
       <mat-card appearance="outlined" class="">
         <mat-card-title class="p-4">
           <div class="flex justify-between items-center">
             <div class="font-medium text-xl">General</div>
-            <div class="flex space-x-4">
+            <div class="flex space-x-4 items-center">
+              @if (selectedUser()?.userStatus !== UserStatus.BLOCKED.toString()) {
+                <mat-icon
+                  class="cursor-pointer text-red-600"
+                  (click)="openBlockDialog()"
+                  matTooltip="Block user"
+                >
+                  block
+                </mat-icon>
+              } @else {
+                <mat-icon
+                  class="cursor-pointer text-green-600"
+                  (click)="unblockUser()"
+                  matTooltip="Unblock user"
+                >
+                  lock_open
+                </mat-icon>
+              }
+
               <mat-icon class="cursor-pointer" (click)="saveGeneralInfo()">save</mat-icon>
             </div>
           </div>
         </mat-card-title>
-        <mat-divider/>
+        <mat-divider />
         <mat-card-content>
-          <form [formGroup]="userGeneralForm" class="p-4 grid space-x-2 grid-rows-2 grid-cols-3 gap-y-4">
-
-            <app-value-input-string [label]="'First name'" [hide]="false" formControlName="firstName"/>
-            <app-value-input-string [label]="'Last name'" [hide]="false" formControlName="lastName"/>
-            <app-value-input-date [label]="'Date of birth'" formControlName="birthDate"/>
-            <app-value-input-string [label]="'Phone number'" [hide]="false" formControlName="phoneNumber"/>
-            <app-value-input-string [label]="'Address'" [hide]="false" formControlName="address"/>
-            <app-value-input-string [label]="'Email'" [hide]="false" formControlName="email"/>
+          <form
+            [formGroup]="userGeneralForm"
+            class="p-4 grid space-x-2 grid-rows-2 grid-cols-3 gap-y-4"
+          >
+            <app-value-input-string
+              [label]="'First name'"
+              [hide]="false"
+              formControlName="firstName"
+            />
+            <app-value-input-string
+              [label]="'Last name'"
+              [hide]="false"
+              formControlName="lastName"
+            />
+            <app-value-input-date [label]="'Date of birth'" formControlName="birthDate" />
+            <app-value-input-string
+              [label]="'Phone number'"
+              [hide]="false"
+              formControlName="phoneNumber"
+            />
+            <app-value-input-string [label]="'Address'" [hide]="false" formControlName="address" />
+            <app-value-input-string [label]="'Email'" [hide]="false" formControlName="email" />
             <mat-form-field class="w-full">
               <mat-label>Choose user status</mat-label>
               <mat-select formControlName="userStatus">
-                @for (userStatus of Object.values(UserStatus) ; track userStatus) {
+                @for (userStatus of Object.values(UserStatus); track userStatus) {
                   <mat-option [value]="userStatus">{{ userStatus.toString() }}</mat-option>
                 }
               </mat-select>
