--- a/voom-fe/src/app/shared/report/report.html
+++ b/voom-fe/src/app/shared/report/report.html
@@ -42,7 +42,7 @@
         color="primary"
         class="generate-btn"
         (click)="loadReports()"
-        [disabled]="!fromDate || !toDate || isInvalidRange()"
+        [disabled]="!fromDate || !toDate || isInvalidRange() || isSuspended()"
       >
         Generate Report
       </button>
