--- a/voom-fe/src/app/main-shell/driver-pages/driver-home/driver-home.html
+++ b/voom-fe/src/app/main-shell/driver-pages/driver-home/driver-home.html
@@ -1,80 +1,116 @@
 <div class="p-8 space-y-8">
   <div class="rounded-3xl">
-   <app-map [focusedDriverId]="myId()" [points]="routePoints()"></app-map>
+    <app-map [focusedDriverId]="myId()" [points]="routePoints()"> </app-map>
   </div>
-  @if (activeRideId(); as ride) {
-    <div class="text-xl text-primary font-medium mb-4">Active ride</div>
-    <div class="flex justify-center w-full">
-      <div class="w-full max-w-2xl">
-        <div class="flex items-center justify-center gap-8 py-4">
-          <!-- STOP -->
-          <div class="flex flex-col items-center gap-2">
-            <p class="text-center text-gray-600">If you want to stop the ride click the button below.</p>
-            <button matButton="filled" (click)="stopRide()">Stop</button>
-          </div>
-          <mat-divider vertical></mat-divider>
-          <div class="flex flex-col items-center gap-2">
-            <p class="text-center text-gray-600">In case of emergency, press the PANIC button to alert authorities.</p>
-            <button class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-full cursor-pointer" (click)="panic()">PANIC
-            </button>
+
+  @if (isSuspended()) {
+    <div class="flex justify-center items-center">
+      <div
+        class="bg-red-100 text-red-700 px-8 py-6 rounded-2xl font-medium text-center text-lg shadow-sm"
+      >
+        Your account has been suspended.<br />
+        Reason: {{ blockReason() }}
+      </div>
+    </div>
+  } @else {
+    @if (activeRideId(); as ride) {
+      <div class="text-xl text-primary font-medium mb-4">Active ride</div>
+
+      <div class="flex justify-center w-full">
+        <div class="w-full max-w-2xl">
+          <div class="flex items-center justify-center gap-8 py-4">
+            <div class="flex flex-col items-center gap-2">
+              <p class="text-center text-gray-600">
+                If you want to stop the ride click the button below.
+              </p>
+              <button matButton="filled" (click)="stopRide()">Stop</button>
+            </div>
+
+            <mat-divider vertical></mat-divider>
+
+            <!-- PANIC -->
+            <div class="flex flex-col items-center gap-2">
+              <p class="text-center text-gray-600">
+                In case of emergency, press the PANIC button to alert authorities.
+              </p>
+              <button
+                class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-full cursor-pointer"
+                (click)="panic()"
+              >
+                PANIC
+              </button>
+            </div>
           </div>
         </div>
       </div>
+    }
+
+    <div>
+      <h1 class="text-xl text-primary font-medium">Summary</h1>
+      <h1 class="text-lg text-primary">
+        {{ getFormattedDate() }}
+      </h1>
+    </div>
+
+    <div class="flex justify-around items-center px-32 py-8">
+      <div class="w-xl">
+        <apx-chart
+          [series]="chartOptions.series!"
+          [chart]="chartOptions.chart!"
+          [labels]="chartOptions.labels!"
+          [colors]="chartOptions.colors!"
+          [dataLabels]="chartOptions.dataLabels!"
+          [legend]="chartOptions.legend!"
+          [responsive]="chartOptions.responsive!"
+        >
+        </apx-chart>
+      </div>
+
+      <div class="space-y-8">
+        <div class="space-y-4">
+          <h1 class="text-xl text-primary">Rating</h1>
+          <div class="flex">
+            <mat-icon class="icon">star_rate</mat-icon>
+            <mat-icon class="icon">star_rate</mat-icon>
+            <mat-icon class="icon">star_rate</mat-icon>
+            <mat-icon class="icon">star_rate</mat-icon>
+            <mat-icon class="icon">star_rate_half</mat-icon>
+          </div>
+        </div>
+
+        <div>
+          <h1 class="text-xl text-primary">Progress</h1>
+          <apx-chart
+            [series]="activeTimeOptions.series!"
+            [chart]="activeTimeOptions.chart!"
+            [plotOptions]="activeTimeOptions.plotOptions!"
+            [xaxis]="activeTimeOptions.xaxis!"
+            [colors]="activeTimeOptions.colors!"
+          >
+          </apx-chart>
+          <h1 class="text-lg text-primary">75% driving out of active time</h1>
+        </div>
+
+        <div class="flex flex-col">
+          <div class="flex justify-between">
+            <h1 class="text-xl text-primary">Rides Completed:</h1>
+            <h1 class="text-xl text-primary">5</h1>
+          </div>
+          <div class="flex justify-between">
+            <h1 class="text-xl text-primary">Earned:</h1>
+            <h1 class="text-xl text-primary">$75.27</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="flex justify-center items-center space-x-4">
+      <span class="text-lg text-primary font-medium"> PASSIVE </span>
+
+      <mat-slide-toggle [checked]="driverState() === 'ACTIVE'" (change)="onToggleChange($event)">
+      </mat-slide-toggle>
+
+      <span class="text-lg text-primary font-medium"> ACTIVE </span>
     </div>
   }
-  <div>
-    <h1 class="text-xl text-primary font-medium">Summary</h1>
-    <h1 class="text-lg text-primary">{{ getFormattedDate() }}</h1>
-  </div>
-  <div class="flex justify-around items-center px-32 py-8">
-    <div class="w-xl">
-      <apx-chart
-        [series]="chartOptions.series!"
-        [chart]="chartOptions.chart!"
-        [labels]="chartOptions.labels!"
-        [colors]="chartOptions.colors!"
-        [dataLabels]="chartOptions.dataLabels!"
-        [legend]="chartOptions.legend!"
-        [responsive]="chartOptions.responsive!"
-      ></apx-chart>
-    </div>
-    <div class="space-y-8">
-      <div class="space-y-4">
-        <h1 class="text-xl text-primary">Rating</h1>
-        <div class="flex">
-          <mat-icon class="icon">star_rate</mat-icon>
-          <mat-icon class="icon">star_rate</mat-icon>
-          <mat-icon class="icon">star_rate</mat-icon>
-          <mat-icon class="icon">star_rate</mat-icon>
-          <mat-icon class="icon">star_rate_half</mat-icon>
-        </div>
-      </div>
-      <div>
-        <h1 class="text-xl text-primary">Progress</h1>
-        <apx-chart
-          [series]="activeTimeOptions.series!"
-          [chart]="activeTimeOptions.chart!"
-          [plotOptions]="activeTimeOptions.plotOptions!"
-          [xaxis]="activeTimeOptions.xaxis!"
-          [colors]="activeTimeOptions.colors!"
-        ></apx-chart>
-        <h1 class="text-lg text-primary">75% driving out of active time</h1>
-      </div>
-      <div class="flex flex-col">
-        <div class="flex justify-between">
-          <h1 class="text-xl text-primary">Rides Completed:</h1>
-          <h1 class="text-xl text-primary">5</h1>
-        </div>
-        <div class="flex justify-between">
-          <h1 class="text-xl text-primary">Earned:</h1>
-          <h1 class="text-xl text-primary">$75.27</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="flex justify-center items-center space-x-4">
-    <span class="text-lg text-primary font-medium">PASSIVE</span>
-    <mat-slide-toggle [checked]="driverState() === 'ACTIVE'" (change)="onToggleChange($event)"></mat-slide-toggle>
-    <span class="text-lg text-primary font-medium">ACTIVE</span>
-  </div>
 </div>
