--- a/voom-fe/src/app/main-shell/user-pages/user-home/user-home.html
+++ b/voom-fe/src/app/main-shell/user-pages/user-home/user-home.html
@@ -198,7 +198,7 @@
   }
 
   @if (isSuspended()) {
-    <div class="w-full flex justify-center mt-8">
+    <div class="w-full flex justify-center mt-8 mb-20">
       <div
         class="bg-red-50 border border-red-200 text-red-700 p-6 rounded-2xl max-w-xl text-center shadow-sm"
       >
