--- a/voom-app/app/src/main/res/navigation/admin_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/admin_nav_graph.xml
@@ -14,4 +14,9 @@
         android:id="@+id/adminProfileFragment"
         android:name="inc.visor.voom.app.user.profile.ProfileFragment"
         android:label="ProfileFragment" />
+    <fragment
+        android:id="@+id/adminTrackingFragment"
+        android:name="inc.visor.voom.app.admin.tracking.AdminTrackingFragment"
+        android:label="fragment_admin_tracking"
+        tools:layout="@layout/fragment_admin_tracking" />
 </navigation>
