feat: User statistics.

--- a/voom-app/app/src/main/res/navigation/user_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/user_nav_graph.xml
@@ -55,5 +55,10 @@
         android:id="@+id/userHomeFragment"
         android:name="inc.visor.voom.app.user.home.UserHomeFragment"
         android:label="UserHomeFragment" />
+    <fragment
+        android:id="@+id/userStatisticsFragment"
+        android:name="inc.visor.voom.app.user.statistics.UserStatisticsFragment"
+        android:label="Statistics"
+        tools:layout="@layout/fragment_user_statistics" />
 
 </navigation>
