--- a/voom-app/app/src/main/res/layout/fragment_admin_users.xml
+++ b/voom-app/app/src/main/res/layout/fragment_admin_users.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
         <EditText
             android:id="@+id/etSearch"
@@ -21,9 +22,10 @@
             android:id="@+id/btnAddDriver"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/outline_add_24"
+            android:src="@drawable/outline_add_2_24"
             android:background="@null"/>
     </LinearLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUsers"
