--- a/voom-app/app/src/main/res/layout/fragment_create_driver.xml
+++ b/voom-app/app/src/main/res/layout/fragment_create_driver.xml
@@ -63,6 +63,26 @@
                 android:layout_height="wrap_content"/>
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- BIRTH DATE -->
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/RoundedOutlinedInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:hint="Birth date"
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/baseline_calendar_month_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_birth_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:clickable="true"
+                android:inputType="none"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
         <!-- PHONE -->
         <com.google.android.material.textfield.TextInputLayout
             style="@style/RoundedOutlinedInput"
