--- a/voom-app/app/src/main/res/layout/fragment_driver_home.xml
+++ b/voom-app/app/src/main/res/layout/fragment_driver_home.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/primary"
             android:text="@string/today"
-            android:textSize="32dp"
+            android:textSize="32sp"
             android:textStyle="bold"/>
 
         <TextView
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/primary"
             android:text="@string/date_today"
-            android:textSize="24dp"
+            android:textSize="24sp"
             android:textStyle="normal"/>
 
         <LinearLayout
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/primary"
                 android:text="@string/rides_today"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="normal"/>
 
             <TextView
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/primary"
                 android:text="@string/money_earned"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="normal"/>
 
         </LinearLayout>
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/primary"
                 android:text="@string/status_inactive"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 android:textStyle="normal"
                 android:paddingHorizontal="16dp"/>
 
@@ -79,14 +79,14 @@
                 android:id="@+id/toggle_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="32dp"/>
+                android:textSize="32sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/primary"
                 android:text="@string/status_active"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 android:textStyle="normal"
                 android:paddingHorizontal="16dp"/>
 
