--- a/voom-app/app/src/main/res/navigation/user_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/user_nav_graph.xml
@@ -60,5 +60,9 @@
         android:name="inc.visor.voom.app.user.statistics.UserStatisticsFragment"
         android:label="Statistics"
         tools:layout="@layout/fragment_user_statistics" />
+    <fragment
+        android:id="@+id/scheduledRidesFragment"
+        android:name="inc.visor.voom.app.shared.component.scheduled.ScheduledRidesFragment"
+        android:label="ScheduledRidesFragment" />
 
 </navigation>
