feat: Admin global reports fragment.

--- a/voom-app/app/src/main/res/navigation/admin_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/admin_nav_graph.xml
@@ -22,7 +22,7 @@
 
     <fragment
         android:id="@+id/adminUsersFragment"
-        android:name="inc.visor.voom.app.admin.users.AdminUsersFragment"
+        android:name="inc.visor.voom.app.admin.statistics.AdminStatisticsFragment"
         android:label="Users" />
 
     <fragment
