--- a/voom-app/app/src/main/res/layout/fragment_main_admin.xml
+++ b/voom-app/app/src/main/res/layout/fragment_main_admin.xml
@@ -31,6 +31,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/admin_bottom_nav_menu"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
