--- a/voom-app/app/src/main/res/navigation/admin_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/admin_nav_graph.xml
@@ -29,5 +29,10 @@
         android:id="@+id/createDriverFragment"
         android:name="inc.visor.voom.app.driver.create.CreateDriverFragment"
         android:label="Create Driver" />
+    <fragment
+        android:id="@+id/rideHistoryFragment"
+        android:name="inc.visor.voom.app.shared.component.history.RideHistoryFragment"
+        android:label="fragment_ride_history"
+        tools:layout="@layout/fragment_ride_history" />
 
 </navigation>
